--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-APScheduler~=3.10.1
-fastapi~=0.94.1
+APScheduler
+fastapi
+httpx~=0.24.1
 jose~=1.0.0
-loguru~=0.6.0
-peewee~=3.16.0
-starlette~=0.26.1
-uvicorn~=0.21.0
+loguru~=0.7.0
+peewee~=3.16
+starlette
+uvicorn~=0.24.0
 pymysql
 passlib[bcrypt]
 pydantic[dotenv]
 python-jose[cryptography]
-redis~=5.0.1
+redis~=5.3.1
+pydantic-settings
